--- a/pages/about.html
+++ b/pages/about.html
@@ -34,26 +34,33 @@
             <hr class="divider">
             <p class="lead"> This is our passion</p>
         </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio.
+        <div class="info-wrapper">
+            <p class="one">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio.
                 Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.
                 Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.
                 Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent
-                per conubia nostra, per inceptos himenaeos.
+                per conubia nostra, per inceptos himenaeos.</p>
 
+            <p class="one">
                 Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor.
                 Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis
                 tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel,
-                suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet.
-            </p>
+                suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet.</p>
 
-        <img class="founder" width="300px" src="../assets/founder-photoBy-andrew-neel-304754-unsplash.jpg"
+
+
+        </div>
+
+        <img class="founder" src="../assets/founder-photoBy-andrew-neel-304754-unsplash.jpg"
             alt="Woman seated on kayak, that is upside down and on land">
-
         <!-- </main> -->
-
-        <footer class="about_footer">the footer</footer>
-
+        <div class ="scene-wrapper">
+        <div class="scene" alt="picture of multiple kayakers on river, with a big blue sky">
+            </div>
     </div>
+            <footer class="about_footer">the footer</footer>
+
+        </div>
 </body>
 
 </html>
