started on the footer

--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
         </main>
 
 
-        <footer>Footer</footer>
-
+        
         <!-- modal -->
 
         <div class="modal_bg">
@@ -146,8 +145,21 @@
             </div>
         </div>
     </div>
+    <div class="about_footer">
+            <footer>
+                <div class="company-name">
+                    <span>KAYAK<span class="co-name1">ADVENTURE</span>COMPANY</span>
+                </div>
 
-</body>
+                <p class="footer-p"> metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh.
+                    Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per
+                    conubia nostra, per inceptos himenaeos. 
+                </p>
+
+            </footer>
+        </div>
+
+
 <!--end modal-->
 
 
