--- a/pages/about.html
+++ b/pages/about.html
@@ -54,13 +54,43 @@
         <img class="founder" src="../assets/founder-photoBy-andrew-neel-304754-unsplash.jpg"
             alt="Woman seated on kayak, that is upside down and on land">
         <!-- </main> -->
-        <div class ="scene-wrapper">
-        <div class="scene" alt="picture of multiple kayakers on river, with a big blue sky">
+        <div class="scene-wrapper">
+            <div class="scene" alt="picture of multiple kayakers on river, with a big blue sky">
             </div>
-    </div>
-            <footer class="about_footer">the footer</footer>
-
         </div>
+
+        <div class="local">
+            <p class="local-heading">Local Knowledge</p>
+            <hr class="line">
+            <p class="two">Nullam mauris orci, aliquet et, iaculis et, viverra vitae, ligula.
+                Nulla ut felis in purus aliquam imperdiet. Maecenas aliquet mollis lectus.
+                Vivamus consectetuer risus et tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh
+                elementum imperdiet.
+                Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.
+            </p>
+        </div>
+        <img src="../assets/kayak-guide.jpeg"
+            alt="man standing in water, speaking to a group of other who are also in the water" class="guide">
+
+        <div class="about_footer">
+            <footer>
+                <div class="company-name">
+                    <span>KAYAK<span class="co-name1">ADVENTURE</span>COMPANY</span>
+                </div>
+
+                <p class="footer-p"> metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh.
+                    Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per
+                    conubia nostra, per inceptos himenaeos. 
+                </p>
+
+            </footer>
+        </div>
+
+
+
+
+    </div>
 </body>
 
 </html>
