before i start trying to make it responsive

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
                     <p class="center-photo-info">The Allegheny River is a 325-mile (523 km) long headwater stream of the
                         Ohio River
                         in western Pennsylvania and New York, United States. The Allegheny River runs from
-                        its headwaters just below the middle of Pennsylvania's northern border northwesterly
-                        into New York.
+                        its headwaters just below the middle of Pennsylvania's northern border.
                     </p>
                     <button>Learn More</button>
                 </div>
@@ -145,18 +144,31 @@
             </div>
         </div>
     </div>
+   
     <div class="about_footer">
-            <footer>
-                <div class="company-name">
-                    <span>KAYAK<span class="co-name1">ADVENTURE</span>COMPANY</span>
-                </div>
+            <!-- <footer> -->
+            <div class="company-name">
+                <span>KAYAK<span class="co-name1">ADVENTURE</span>COMPANY</span>
+            </div>
 
-                <p class="footer-p"> metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh.
-                    Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per
-                    conubia nostra, per inceptos himenaeos. 
-                </p>
+            <p class="footer-p"> metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh.
+                Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per
+                conubia nostra, per inceptos himenaeos.
+            </p>
+            <p class="copy">&copy2019 | Webisite design by Carla Wilson</p>
 
-            </footer>
+           
+            <div class="contact">
+                <p>KAYAK ADVENTURE COMPANY<br>
+                <P>1145 Stuart Street<br>
+                    Pittsburgh, PA 15206<br>
+                    <a class="tele" href="tel:202-555-1234">(202) 555-1234</a><br>
+                    <a  class = "tele"href="#">info@kayakadventurecompany.com</a> 
+                </P>
+            </div>
+
+
+
         </div>
 
 
