--- a/pages/about.html
+++ b/pages/about.html
@@ -3,10 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="HandheldFriendly" content="true">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway|Teko&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style/about.css ">
+
+
 
 
     <title>KAYAK ADVENTURES</title>
@@ -74,17 +79,29 @@
             alt="man standing in water, speaking to a group of other who are also in the water" class="guide">
 
         <div class="about_footer">
-            <footer>
-                <div class="company-name">
-                    <span>KAYAK<span class="co-name1">ADVENTURE</span>COMPANY</span>
-                </div>
+            <!-- <footer> -->
+            <div class="company-name">
+                <span>KAYAK<span class="co-name1">ADVENTURE</span>COMPANY</span>
+            </div>
 
-                <p class="footer-p"> metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh.
-                    Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per
-                    conubia nostra, per inceptos himenaeos. 
-                </p>
+            <p class="footer-p"> metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh.
+                Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per
+                conubia nostra, per inceptos himenaeos.
+            </p>
+            <p class="copy">&copy2019 | Website design by Carla Wilson</p>
 
-            </footer>
+
+            <div class="contact">
+                <p>KAYAK ADVENTURE COMPANY<br>
+                    <P>1145 Stuart Street<br>
+                        Pittsburgh, PA 15206<br>
+                        <a class="tele" href="tel:202-555-1234">(202) 555-1234</a><br>
+                        <a class="tele" href="#">info@kayakadventurecompany.com</a>
+                    </P>
+            </div>
+
+
+
         </div>
 
 
