added @media to about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--  -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway|Teko&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style/about.css ">
 
@@ -92,7 +93,7 @@
 
 
             <div class="contact">
-                <p>KAYAK ADVENTURE COMPANY<br>
+                <p class = "second-title">KAYAK ADVENTURE COMPANY<br>
                     <P>1145 Stuart Street<br>
                         Pittsburgh, PA 15206<br>
                         <a class="tele" href="tel:202-555-1234">(202) 555-1234</a><br>
