updated link in readme

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <p class="center-photo-info">The Allegheny River is a 325-mile (523 km) long headwater stream of the
                         Ohio River
                         in western Pennsylvania and New York, United States. The Allegheny River runs from
-                        its headwaters just below the middle of Pennsylvania's northern border.
+                        its headwaters just below the middle of Pennsylvania's northern border and continue.
                     </p>
                     <button>Learn More</button>
                 </div>
